# draft_buddy

./: .gitignore  Dockerfile  GEMINI.md  README.md  app.py  borderline_adp_matches.csv  build.sh  config.py  convert_nfl_colors.py  data_downloader.py  data_driver.py  data_utils.py  docker-compose.yml  draft_rules.py  draft_service.py  draft_state.py  fantasy_draft_env.py  final_data_with_adp.csv  lighten_colors.py  lighter_team_colors.js  main.py  metrics_logger.py  opponent_strategies.py  plan.md  policy_network.py  pyproject.toml  reinforce_agent.py  repomix-output.xml  requirements.txt  rookie_projector.py  run.sh  run_season_simulation.py  scoring_service.py  simulate.py  spec.md  train.py
api/: app.py
data/: FantasyPros_2024_Overall_ADP_Rankings.csv  FantasyPros_2025_Overall_ADP_Rankings.csv  borderline_adp_matches.csv  draft_state.json  generated_player_data.csv  merged_player_data_cleaned.csv  nfl_colors.csv  player_stats_kicking.csv  red_league_matchups_2024.csv  red_league_matchups_2025.csv  roster_2025.csv
frontend/: index.html  script.js  style.css
legacy_data/: red_league_2023.xlsx  red_league_matchups.csv
ml_core/: fantasy_draft_env.py  policy_network.py
models/: reinforce_policy_model_20250608_071354.pth  reinforce_policy_model_20250608_071742.pth  reinforce_policy_model_20250608_071810.pth  reinforce_policy_model_20250608_072212.pth  reinforce_policy_model_20250608_072859.pth  reinforce_policy_model_20250608_073143.pth  reinforce_policy_model_20250608_073528.pth  reinforce_policy_model_20250608_073851.pth  (+24 more)
scripts/: generate_projections.py  (+5 more)
(+139 files in other folders)
