[project]
name = "draft-buddy"
version = "0.1.0"
description = "A Reinforcement Learning based Fantasy Football Draft AI"
authors = [
    { name = "Michael Bertagna" }
]
dependencies = [
    "pandas",
    "numpy",
    "torch",
    "gym",
    "matplotlib",
    "fastapi",
    "httpx",
    "uvicorn",
    "requests",
    "tqdm",
    "fuzzywuzzy",
    "python-Levenshtein",
    "beautifulsoup4",
    "bokeh",
    "pytest",
    "pytest-cov",
    "tree-sitter>=0.21",
    "tree-sitter-python>=0.21",
]
requires-python = ">=3.10"

[project.scripts]
draft-arch = "draft_buddy.arch_viz.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
